Fix mobile horizontal overflow

--- a/source/_scss/_post.scss
+++ b/source/_scss/_post.scss
@@ -1,3 +1,7 @@
+.post {
+  overflow: hidden;
+}
+
 .post--content,
 .post--comments,
 .post--related {
